--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="./blog_list.html">Blog</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./about_me.html">About me</a>
+                    <a class="nav-link" href="./about_me.html">About Me</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -75,9 +75,9 @@
 
         <div class="container my-3">
             <div class="row">
-                <div class="col-md-8 col-lg-9">
+                <div class="col-md-8 col-lg-9" id="main-area">
                     <h1>Blog</h1>
-
+                {% if post_list.exists %}
                     {% for p in post_list %}
                     <!-- Blog Post -->
                     <div class="card mb-4">
@@ -100,7 +100,9 @@
                         <a href="#">작성자명 쓸 위치(개발 예정)</a>
                     </div>
                     {% endfor %}
-                    
+                {% else %}
+                    <h3>아직 게시물이 없습니다</h3>
+                {% endif %}
                     <!-- Pagination-->
                     <nav aria-label="Pagination">
                         <hr class="my-0" />
