--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -23,11 +23,15 @@
                                 by
                                 <a href="#">{{ post.author | upper }}</a>
                             </p>
-                            <!-- Post meta content-->
-                            <div class="text-muted fst-italic mb-2">Posted on {{ post.created_at }}</div>
-                            <!-- Post categories-->
-                            <a class="badge bg-secondary text-decoration-none link-light" href="#!">Web Design</a>
-                            <a class="badge bg-secondary text-decoration-none link-light" href="#!">Freebies</a>
+
+                            <hr>
+
+                            {% if user.is_authenticated and user == post.author %}
+                                <a class="btn btn-info btn-sm float-right" href="/blog/update_post/{{ post.pk }}/" role="button"><i class="fa-solid fa-pen"></i>  Edit Post</a>
+                            {% endif %}
+
+                            <!-- Date/Time-->
+                            <p>Posted on {{ post.created_at }}</p>
                         </header>
                         <!-- Preview image figure-->
                         {% if p.head_image %}
