--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -46,7 +46,7 @@
                             {% if post.tags.exists %}
                                 <i class="fa-solid fa-tags"></i>
                                 {% for tag in post.tags.all %}
-                                    <a href="{{ tag.get_absolute_url }}" class="badge badge-light">{{ tag }}</a>
+                                    <a href="{{ tag.get_absolute_url }}" class="badge badge-light text-dark">{{ tag }}</a>
                                 {% endfor %}
                                 <br/>
                                 <br/>
