--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -41,7 +41,7 @@
                         {% endif %}
                         <!-- Post content-->
                         <section class="mb-5">
-                            <p>{{ post.content }}</p>
+                            <p>{{ post.get_content_markdown | safe }}</p>
 
                             {% if post.tags.exists %}
                                 <i class="fa-solid fa-tags"></i>
