--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,51 +10,52 @@
 
     {% include 'blog/navbar.html' %}
 
-           <div class="container my-3">
-            <div class="row">
-                <div class="col-md-8 col-lg-9" id="main-area">
+    <div class="container my-3">
+        <div class="row">
+            <div class="col-md-8 col-lg-9" id="main-area">
                     {% block main_area %}
                     {% endblock %}
-                </div>
-                <div class="col-md-4 col-lg-3">
+            </div>
+            <div class="col-md-4 col-lg-3">
 
-                    <!-- Search widget-->
-                    <div class="card mb-4">
-                        <div class="card-header">Search</div>
-                        <div class="card-body">
-                            <div class="input-group">
-                                <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
-                                <button class="btn btn-primary" id="button-search" type="button">Go!</button>
-                            </div>
+                <!-- Search widget-->
+                <div class="card mb-4">
+                    <div class="card-header">Search</div>
+                    <div class="card-body">
+                        <div class="input-group">
+                            <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
+                            <button class="btn btn-primary" id="button-search" type="button">Go!</button>
                         </div>
                     </div>
+                </div>
 
-                    <!-- Categories widget-->
-                    <div class="card mb-4" id="categories-card">
-                        <div class="card-header">Categories</div>
+                <!-- Categories widget-->
+                <div class="card mb-4" id="categories-card">
+                    <div class="card-header">Categories</div>
                         <div class="card-body">
                             <div class="row">
-                                    <ul>
-                                        {% for category in categories %}
-                                        <li>
-                                            <a href="{{ category.get_absolute_url }}">{{ category }} ({{ category.post_set.count }})</a>
-                                        </li>
-                                        {% endfor %}
-                                        <li>
-                                            <a href="/blog/category/no_category/">미분류 ({{ no_category_post_count }})</a>
-                                        </li>
-                                    </ul>
+                                <ul>
+                                    {% for category in categories %}
+                                    <li>
+                                        <a href="{{ category.get_absolute_url }}">{{ category }} ({{ category.post_set.count }})</a>
+                                    </li>
+                                    {% endfor %}
+                                    <li>
+                                        <a href="/blog/category/no_category/">미분류 ({{ no_category_post_count }})</a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
-                    </div>
                 </div>
             </div>
-            </div>
+        </div>
+    </div>
 
     {% include 'blog/footer.html' %}
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+
     </body>
 </html>
