--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -1,42 +1,45 @@
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid container">
-              <a class="navbar-brand" href="/">Do It Django</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/blog/">Blog</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/about_me/">About Me</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown link
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </li>
-                </ul>
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">Log In</a>
-                    </li>
-                </ul>
-              </div>
-            </div>
-        </nav>
+ {% load socialaccount %}
 
-       <!-- Modal -->
-        <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="logInModalLabel" aria-hidden="true">
+ <nav class="navbar navbar-expand-lg navbar-light bg-light">
+     <div class="container">
+         <a class="navbar-brand" href="/">Do It Django</a>
+         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+             <span class="navbar-toggler-icon"></span>
+         </button>
+
+         <div class="collapse navbar-collapse" id="navbarNavDropdown">
+             <ul class="navbar-nav">
+                 <li class="nav-item active">
+                     <a class="nav-link" href="/">Home</a>
+                 </li>
+                 <li class="nav-item">
+                        <a class="nav-link" href="/blog/">Blog</a>
+                 </li>
+                 <li class="nav-item">
+                        <a class="nav-link" href="/about_me/">About Me</a>
+                 </li>
+             </ul>
+
+             <ul class="navbar-nav ml-auto">
+                 {% if user.is_authenticated %}
+                     <a class="nav-item dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="flase">
+                         {{ user.username }}
+                     </a>
+                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                         <a class="dropdown-item" href="/accounts/logout/">Log Out</a>
+                     </div>
+                 {% else %}
+                     <li class="nav-item">
+                         <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">Log In</a>
+                     </li>
+                 {% endif %}
+             </ul>
+         </div>
+     </div>
+ </nav>
+
+ <!-- Modal -->
+ <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="logInModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
             <div class="modal-header">
@@ -48,11 +51,11 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-6">
-                        <button type="button" class="btn btn-outline-dark btn-block btn-sm"><i class="fa-brands fa-google"></i> Log in with Google</button>
-                        <button type="button" class="btn btn-outline-dark btn-block btn-sm"><i class="fa-solid fa-envelope"></i> Log in with E-mail</button>
+                        <a role="button" class="btn btn-outline-dark btn-block btn-sm" href="{% provider_login_url 'google' %}"><i class="fa-brands fa-google"></i> Log in with Google</a>
+                        <a role="button" class="btn btn-outline-dark btn-block btn-sm" href="/accounts/login/"><i class="fa-solid fa-envelope"></i> Log in with Username</a>
                     </div>
                     <div class="col-md-6">
-                        <button type="button" class="btn btn-outline-dark btn-block btn-sm"><i class="fa-solid fa-envelope"></i> Sign up with E-mail</button>
+                        <a role="button" class="btn btn-outline-dark btn-block btn-sm" href="/accounts/signup/"><i class="fa-solid fa-envelope"></i> Sign up with E-mail</a>
                     </div>
                 </div>
             </div>
@@ -62,4 +65,4 @@
             </div>
             </div>
         </div>
-        </div>
+ </div>
