--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -12,57 +12,68 @@
         {% if category %}<span class="badge badge-secondary">{{ category }}</span>{% endif %}
         {% if tag %}<span class="badge badge-light text-dark"><i class="fa-solid fa-tags"></i>{{ tag }} ({{ tag.post_set.count }})</span>{% endif %}
     </h1>
-                {% if post_list.exists %}
-                    {% for p in post_list %}
-                        <!-- Blog Post -->
-                        <div class="card mb-4" id="post-{{ p.pk }}">
-                            {% if p.head_image %}
-                                <a href="#!"><img class="card-img-top" src="{{ p.head_image.url }}" alt="{{ p }} head image" /></a>
-                            {% else %}
-                                <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/800/200" alt="random_image">
-                            {% endif %}
-                            <div class="card-body">
-                                {% if p.category %}
-                                    <span class="badge badge-secondary float-right">{{ p.category }}</span>
-                                {% else %}
-                                    <span class="badge badge-secondary float-right">미분류</span>
-                                {% endif %}
-                                <h2 class="card-title h4">{{ p.title }}</h2>
-                                {% if p.hook_text %}
-                                    <h5 class="text-muted">{{ p.hook_text }}</h5>
-                                {% endif %}
-                                    <p class="card-text">{{ p.get_content_markdown | truncatewords_html:45 | safe }}</p>
-                                    {% if p.tags.exists %}
-                                        <i class="fa-solid fa-tags"></i>
-                                        {% for tag in p.tags.iterator %}
-                                            <a href="{{ tag.get_absolute_url }}"><span class="badge rounded-pill bg-secondary">{{ tag }}</span></a>
-                                        {% endfor %}
-                                        <br/>
-                                        <br/>
-                                    {% endif %}
-
-                                    <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more →</a>
-                            </div>
-                            <div class="card-footer text-muted">
-                                Posted on {{ p.created_at }} by
-                                <a href="#">{{ p.author | upper }}</a>
-                            </div>
-                        </div>
-                    {% endfor %}
+    {% if post_list.exists %}
+        {% for p in post_list %}
+            <!-- Blog Post -->
+            <div class="card mb-4" id="post-{{ p.pk }}">
+                {% if p.head_image %}
+                    <a href="#!"><img class="card-img-top" src="{{ p.head_image.url }}" alt="{{ p }} head image" /></a>
                 {% else %}
-                    <h3>아직 게시물이 없습니다</h3>
+                    <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/800/200" alt="random_image">
                 {% endif %}
-                <!-- Pagination-->
-                <nav aria-label="Pagination">
-                    <hr class="my-0" />
-                    <ul class="pagination justify-content-center my-4">
-                            <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Newer</a></li>
-                            <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">3</a></li>
-                            <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">15</a></li>
-                            <li class="page-item"><a class="page-link" href="#!">Older</a></li>
-                    </ul>
-                </nav>
+                <div class="card-body">
+                    {% if p.category %}
+                        <span class="badge badge-secondary float-right">{{ p.category }}</span>
+                    {% else %}
+                        <span class="badge badge-secondary float-right">미분류</span>
+                    {% endif %}
+                        <h2 class="card-title h4">{{ p.title }}</h2>
+                    {% if p.hook_text %}
+                        <h5 class="text-muted">{{ p.hook_text }}</h5>
+                    {% endif %}
+                    <p class="card-text">{{ p.get_content_markdown | truncatewords_html:45 | safe }}</p>
+                    {% if p.tags.exists %}
+                        <i class="fa-solid fa-tags"></i>
+                        {% for tag in p.tags.iterator %}
+                            <a href="{{ tag.get_absolute_url }}"><span class="badge rounded-pill bg-secondary">{{ tag }}</span></a>
+                        {% endfor %}
+                        <br/>
+                        <br/>
+                    {% endif %}
+
+                    <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more →</a>
+                </div>
+                <div class="card-footer text-muted">
+                    Posted on {{ p.created_at }} by
+                    <a href="#">{{ p.author | upper }}</a>
+                </div>
+            </div>
+        {% endfor %}
+    {% else %}
+        <h3>아직 게시물이 없습니다</h3>
+    {% endif %}
+    {% if is_paginated %}
+        <!-- Pagination-->
+        <ul class="pagination justify-content-center mb-4">
+            {% if page_obj.has_next %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.next_page_number }}">&larr; Older</a>
+                </li>
+            {% else %}
+                <li class="page-item disabled">
+                    <a class="page-link" href="#">&larr; Older</a>
+                </li>
+            {% endif %}
+
+            {% if page_obj.has_previous %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Newer &rarr;</a>
+                </li>
+            {% else %}
+                <li class="page-item disabled">
+                    <a class="page-link" href="#">Newer &rarr;</a>
+                </li>
+            {% endif %}
+        </ul>
+    {% endif %}
 {% endblock %}
